rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-15.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: normal
name:
  template_key: template_key
  default_value: ~
locales:
  template_key: template_key
  default_value: ~
navigation:
  allow_printing: false
  browsing_enabled:
    template_key: template_key
    default_value: ~
  can_move_to_previous:
    template_key: template_key
    default_value: ~
  can_regenerate: false
  confirm_when_leaving: false
  mode: sequential
  on_leave:
    action: prevent_if_not_attempted
    message:
      template_key: template_key
      default_value: ~
  show_names_of_question_groups: false
  show_results_page: ~
  show_steps: false
  show_title_page: false
  start_password: ~
timing:
  duration_in_seconds: 2
  allow_pause: false
  on_timeout:
    action: none
  timed_warning:
    action: none
feedback:
  percentage_needed_to_pass:
    template_key: template_key
    default_value: ~
  show_name_of_student: ~
  show_current_marks: ~
  show_maximum_marks: ~
  show_answer_state: ~
  allow_reveal_answer: ~
  review:
    show_score: ~
    show_feedback: ~
    show_expected_answer: ~
    show_advice: ~
  advice:
    content: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  intro:
    content: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  feedback_messages: ~
question_groups:
  template_key: template_key
  default_value: ~
numbas_settings:
  theme: nonjmetext§

