rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-17.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: normal
name:
  content:
    nonjmetext§: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
locales:
  - name: nonjmetext§
    numbas_locale: ar-SA
  - name: "template:template_key"
    numbas_locale: de-DE
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: en-GB
  - name: ~
    numbas_locale: es-ES
  - name: nonjmetext§
    numbas_locale: fr-FR
  - name: "template:template_key"
    numbas_locale: he-IL
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: in-ID
  - name: ~
    numbas_locale: it-IT
  - name: nonjmetext§
    numbas_locale: ja-JP
  - name: "template:template_key"
    numbas_locale: ko-KR
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: nb-NO
  - name: ~
    numbas_locale: nl-NL
  - name: nonjmetext§
    numbas_locale: pl-PL
  - name: "template:template_key"
    numbas_locale: pt-BR
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: sq-AL
  - name: ~
    numbas_locale: sv-SE
  - name: nonjmetext§
    numbas_locale: tr-TR
  - name: "template:template_key"
    numbas_locale: vi-VN
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: zg-CN
  - name: ~
    numbas_locale: "template:template_key"
  - name: nonjmetext§
    numbas_locale:
      template_key: template_key
      default_value: ~
  - name: "template:template_key"
    numbas_locale: ~
  - "template:template_key"
  - template_key: template_key
    default_value: ~
navigation:
  allow_printing: "template:template_key"
  browsing_enabled: false
  can_move_to_previous: false
  can_regenerate: "template:template_key"
  confirm_when_leaving: "template:template_key"
  mode: sequential
  on_leave:
    template_key: template_key
    default_value: ~
  show_names_of_question_groups: "template:template_key"
  show_results_page: never
  show_steps: "template:template_key"
  show_title_page: "template:template_key"
  start_password: none
timing:
  duration_in_seconds: "template:template_key"
  allow_pause:
    template_key: template_key
    default_value: ~
  on_timeout:
    action: warn
    message:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  timed_warning:
    action: warn
    message:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
feedback:
  percentage_needed_to_pass: 1.2
  show_name_of_student: "template:template_key"
  show_current_marks: "template:template_key"
  show_maximum_marks: "template:template_key"
  show_answer_state: "template:template_key"
  allow_reveal_answer: "template:template_key"
  review:
    template_key: template_key
    default_value: ~
  advice: "template:template_key"
  intro: "template:template_key"
  feedback_messages: "template:template_key"
question_groups:
  - name:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: all_ordered
    questions:
      - path
      - "template:template_key"
      - template_key: template_key
        default_value: ~
  - name:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: all_shuffled
    questions: "template:template_key"
  - name:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: random_subset
      pick_questions: 2
    questions:
      template_key: template_key
      default_value: ~
  - name:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: random_subset
      pick_questions: "template:template_key"
    questions: ~
  - name: "file:path/to/file"
    picking_strategy:
      type: random_subset
      pick_questions:
        template_key: template_key
        default_value: ~
    questions:
      - path
      - "template:template_key"
      - template_key: template_key
        default_value: ~
  - name: "template:template_key"
    picking_strategy: "template:template_key"
    questions: "template:template_key"
  - name:
      template_key: template_key
      default_value: ~
    picking_strategy:
      template_key: template_key
      default_value: ~
    questions:
      template_key: template_key
      default_value: ~
  - name: ~
    picking_strategy: ~
    questions: ~
  - "template:template_key"
  - template_key: template_key
    default_value: ~
numbas_settings:
  theme:
    template_key: template_key
    default_value: ~

