rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-2.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: normal
name:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
locales: "template:template_key"
navigation:
  allow_printing: "template:template_key"
  browsing_enabled: "template:template_key"
  can_move_to_previous: "template:template_key"
  can_regenerate: "template:template_key"
  confirm_when_leaving: "template:template_key"
  mode: sequential
  on_leave:
    action: warn_if_not_attempted
    message:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  show_names_of_question_groups: "template:template_key"
  show_results_page: never
  show_steps: "template:template_key"
  show_title_page: "template:template_key"
  start_password: none
timing:
  duration_in_seconds: none
  allow_pause: "template:template_key"
  on_timeout:
    action: warn
    message:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  timed_warning:
    action: warn
    message:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
feedback:
  percentage_needed_to_pass: none
  show_name_of_student: "template:template_key"
  show_current_marks: "template:template_key"
  show_maximum_marks: "template:template_key"
  show_answer_state: "template:template_key"
  allow_reveal_answer: "template:template_key"
  review:
    show_score: "template:template_key"
    show_feedback: "template:template_key"
    show_expected_answer: "template:template_key"
    show_advice: "template:template_key"
  advice:
    content:
      nonjmetext§: "template:template_key"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  intro:
    content:
      nonjmetext§: "template:template_key"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  feedback_messages: "template:template_key"
question_groups: "template:template_key"
numbas_settings:
  theme: "template:template_key"

